fix: remove `vs-inline-gap' style
  - it is safer to define at the Wrapper level to maintain consistent spacing

--- a/packages/vlossom/src/styles/base.scss
+++ b/packages/vlossom/src/styles/base.scss
@@ -26,10 +26,6 @@ body {
     background-color: var(--vs-app-background-color);
 }
 
-.vs-inline-gap:has(+ .vs-inline-gap) {
-    margin-right: 0.5rem;
-}
-
 // vlossom scrollbar
 ::-webkit- {
     &scrollbar {
